--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 HasManyMembers
 ==============
 
-Introduction goes here.
+This is a playground for plugin stuff, under no circumstances should you use it for anything.
 
 
 Example
